<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/nameTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/receiveOrPayTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pagar_ou_receber" />

    <TextView
        android:id="@+id/valueResultTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor" />

</LinearLayout>